--- a/ServiceREST.PMAF/pom.xml
+++ b/ServiceREST.PMAF/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>A23.5C6.TP3</groupId>
-	<artifactId>ServiceREST.AFPM</artifactId>
+	<artifactId>ServiceREST.PMAF</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>A23.5C6.TP3.ServiceREST.AFPM</name>
+	<name>ServiceREST.PMAF</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
