--- a/ServiceREST.PMAF/src/main/resources/application.properties
+++ b/ServiceREST.PMAF/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database
+spring.datasource.username=root
+spring.datasource.password=abc123
+spring.jpa.hibernate.ddl-auto=update
