--- a/ServiceREST.PMAF/pom.xml
+++ b/ServiceREST.PMAF/pom.xml
@@ -39,6 +39,11 @@
 			<version>8.0.33</version>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>RELEASE</version>
