--- a/ServiceREST.PMAF/src/main/resources/application.properties
+++ b/ServiceREST.PMAF/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://172.20.45.115:3306/defaultdb
-spring.datasource.username=tp3user
-spring.datasource.password=abc123
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://172.20.45.115:3306/defaultdb
+#spring.datasource.username=tp3user
+#spring.datasource.password=abc123
+#spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
 #spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
