--- a/ClientLivreurLogistique/logistique/pom.xml
+++ b/ClientLivreurLogistique/logistique/pom.xml
@@ -20,11 +20,26 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.3</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>17</version> <!-- Adjust the version to your JavaFX version -->
         </dependency>
     </dependencies>
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>logistique.ApplicationFX</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
