--- a/ServiceREST.PMAF/src/main/resources/application.properties
+++ b/ServiceREST.PMAF/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+
+graphhopper.data.location=chemin/vers/les/donnees/osm.pbf
+graphhopper.api.key=9dc6d0d3-1f16-4ba9-a572-2923213775fe
